# linked-list-visualizer

./: CMakeLists.txt
include/: linked_list.h  linked_list_draw.h  node.h
src/: linked_list.c  linked_list_draw.c  main.c  node.c
test/: test.c  test.h
